--- a/1-EXERCISE/design-system/package.json
+++ b/1-EXERCISE/design-system/package.json
@@ -23,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styleguidist:server": "npx styleguidist server",
+    "styleguidist:build": "npx styleguidist build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +48,8 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
-    "@types/styled-system": "^5.1.10"
+    "@types/styled-system": "^5.1.10",
+    "react-docgen-typescript": "^1.21.0",
+    "react-styleguidist": "^11.1.5"
   }
 }
